2011-10-13  Alexey Proskuryakov  <ap@apple.com>

        [Mac] PDF Documents at epo.org look very blurry
        https://bugs.webkit.org/show_bug.cgi?id=70072

        Reviewed by Dan Bernstein.

        * WebProcess/Plugins/PDF/BuiltInPDFView.cpp: (WebKit::BuiltInPDFView::paintContent):
        Ensure integral coordinates. <rdar://problem/10283382> tracks lifting this limitation.

2011-10-13  Alexey Proskuryakov  <ap@apple.com>

        [Mac] Wheel event handler counter is incorrect with PDF views
        https://bugs.webkit.org/show_bug.cgi?id=70062

        Reviewed by Dan Bernstein.

        * WebProcess/Plugins/PDF/BuiltInPDFView.h:
        * WebProcess/Plugins/PDF/BuiltInPDFView.cpp:
        (WebKit::BuiltInPDFView::didAddVerticalScrollbar): Added forgotten override for vertical case.
        (WebKit::BuiltInPDFView::willRemoveVerticalScrollbar): Ditto.
        (WebKit::BuiltInPDFView::createScrollbar): Notify self, do not make a shortcut to ScrollAnimator.
        (WebKit::BuiltInPDFView::destroyScrollbar): Ditto.
        (WebKit::BuiltInPDFView::destroy): Actually destroy the scrollbars.

2011-10-12  Chris Marrin  <cmarrin@apple.com>

        Sync requestAnimationFrame callback to CVDisplayLink on Mac
        https://bugs.webkit.org/show_bug.cgi?id=68911

        Reviewed by Simon Fraser.

        Add windowDidChangeScreen function which listens for the window changing
        screens and passes the new displayID along to WebCore::Page. It also sends
        one on windowDidBecomeKey, so the Page has a fresh displayID after it's
        created. Event is generated in the UIProcess and then sent over to the
        WebProcess, which actually sends it to WebCore::Page.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView addWindowObserversForWindow:]):
        (-[WKView removeWindowObservers]):
        (-[WKView _windowDidChangeScreen:]):
        (-[WKView _windowDidBecomeKey:]):
        * UIProcess/WebPageProxy.cpp: