@@ -1,3 +1,11 @@
+2011-10-13  Sam Weinig  <sam@webkit.org>
+
+        Fix SnowLeopard build.
+
+        * UIProcess/WebPageProxy.cpp:
+        (WebKit::WebPageProxy::setCursor):
+        * WebProcess/WebCoreSupport/mac/WebDragClientMac.mm:
+
 2011-10-13  Alexey Proskuryakov  <ap@apple.com>
 
         [Mac] PDF Documents at epo.org look very blurry
